--- a/css/styles.css
+++ b/css/styles.css
@@ -6,9 +6,15 @@
 /* Components */
 @import "components/status-bar.css";
 @import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
 /* Screens */
 @import "screens/login.css";
 
+@import "screens/friends.css";
+
 body {
+  color: var(--iconblack);
   font-family: "Montserrat", sans-serif;
+  height: 1000vh;
 }
