--- a/css/styles.css
+++ b/css/styles.css
@@ -8,13 +8,18 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 /* Screens */
 @import "screens/login.css";
-
 @import "screens/friends.css";
+@import "screens/find.css";
 
 body {
   color: var(--iconblack);
   font-family: "Montserrat", sans-serif;
   height: 1000vh;
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
