--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -21,5 +21,5 @@
   margin: 10px 0px;
   border-top: 1px solid rgba(0, 0, 0, 0.2);
   padding-top: 15px;
-  color: rgba(0, 0, 0, 0.5);
+  color: var(--fontgray);
 }
