--- a/css/components/icon-row.css
+++ b/css/components/icon-row.css
@@ -1,4 +1,4 @@
-.find-icons {
+.icon-row {
   display: flex;
   justify-content: space-between;
   border-bottom: var(--main-border);
@@ -6,16 +6,16 @@
   text-align: center;
 }
 
-.find-icons__icon {
+.icon-row__icon {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.find-icons__icon i {
+.icon-row__icon i {
   font-size: 25px;
 }
 
-.find-icons__icon span {
+.icon-row__icon span {
   margin-top: 15px;
 }
