--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
 @import "components/user-component.css";
 @import "components/badge.css";
 @import "components/icon-row.css";
+@import "components/alt-screen-header.css";
+
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
