--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -71,3 +71,19 @@
   opacity: 0.8;
   font-size: 14px;
 }
+
+.message-row--own {
+  justify-content: flex-end;
+}
+
+.message-row--own .message__bubble {
+  background-color: var(--yellow);
+  border-top-right-radius: 0px;
+  border-top-left-radius: 15px;
+  margin-right: 0px;
+  margin-left: 5px;
+}
+
+.message-row--own .message__info {
+  flex-direction: row-reverse;
+}
